refactor: rename classes and id according rule 3.2 in html-and-css.md

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
 .image-wrapper { text-align: center;
 }
 }
-.centered-main-page-element {
+.app-wrapper {
   display: block;
   width: 500px;
   margin: 0 auto 0;
