refactor: add indents according to rule 3.5 in html-and-css.md

--- a/style.css
+++ b/style.css
@@ -18,8 +18,9 @@
 }
 
 @media (max-width:768px) {
-.image-wrapper { text-align: center;
-}
+  .image-wrapper { 
+    text-align: center;
+  }
 }
 .app-wrapper {
   display: block;
